Version 7.5.2
=============

New Features and Enhancements
-----------------------------
* Switching between views is now supported, using SetView
  The following classes support switching views:
   - Frames
   - MDI Children
   - Dockers
   - DockContainers
   
* Updated Dockers
   - Dock targets invalidated by DS_NO_DOCKCHILD_XXXX are hidden or greyed.
   - Click and drag tab swaps to swap them for DockContainers and TabbedMDIs.
   - Parent dockers now have a minimum size.
   - Added support for DS_FIXED_RESIZE.
   - Dock containers with a single tab can hide the tab.
   - Improved hinting for container within container docking.
 
* Added support for vertical ToolBars and ReBars
   - Vertical ToolBars and ReBars are now supported and themed correctly by CFrame.
      These are demonstrated in the ReBar and ToolBar samples. 
   
* Updated the samples
   - Added DateTime sample to demonstrate CDateTime and CMonthCalendar. 
   - Added ToolBar sample. It demonstrates customizing ToolBars by dynamically
      adding or removing ToolBar buttons. It also demonstrates an additional
	  ToolBar which can be positioned at the top, bottom, left or right of the
	  view window.
   - Added ReBar sample. It demonstrates an additional ReBar which can be 
      positioned at the top, bottom, left or right of the view window.
   - Added StatusBar sample. It demonstrates a colored StatusBar with a
      hyperlink, a progress bar, an icon and an owner drawn part.
   - The DockTabbedMDI sample now includes a Window menu.	 
   - The Themes sample now demonstrates how to save a band's size and position 
      in the registry.
   

Changes in detail
-----------------
Added CFrame::DrawReBarBkgnd
Added CDockContainer::OnMouseMove
Added CDockContainer::SetHideSingleTab
Added CDockContainer::SwapTabs
Added CDocker::GetViewRect
Added CWinApp::LoadImage
Modified CTabbedMDI::GetTab			now returns CWnd*
Moved ::TintBitmap 					to CBitmap::TintBitmap