@@ -3,70 +3,73 @@
 
 // The resource ID for MENU, ICON, ToolBar Bitmap, Accelerator,
 //  and Window Caption
-#define IDW_MAIN                         51
+#define IDW_MAIN                         41
 
 // Resource ID for the About dialog
-#define IDW_ABOUT                        52
+#define IDW_ABOUT                        42
 
 // Resource IDs for menu items
-#define IDW_VIEW_TOOLBAR                 53
-#define IDW_VIEW_STATUSBAR               54
+#define IDW_VIEW_TOOLBAR                 43
+#define IDW_VIEW_STATUSBAR               44
 
-// Resource ID for frame "Ready"
-#define IDW_READY                        55
+// Resource ID for frame status
+#define IDW_READY                        45
+#define IDW_INDICATOR_CAPS               46
+#define IDW_INDICATOR_NUM                47
+#define IDW_INDICATOR_SCRL               48
 
 // Resource IDs for the ReBar Bands
-#define IDW_MENUBAR                      57
-#define IDW_TOOLBAR                      58
+#define IDW_MENUBAR                      49
+#define IDW_TOOLBAR                      50
 
 // Resource ID for the Accelerator key
-#define IDW_QUIT                         59
+#define IDW_QUIT                         51
 
 // Resource IDs for MDI menu items
-#define IDW_MDI_CASCADE                  60
-#define IDW_MDI_TILE                     61
-#define IDW_MDI_ARRANGE                  62
-#define IDW_MDI_CLOSEALL                 63
-#define IDW_FIRSTCHILD                   64
-#define IDW_CHILD2                       65
-#define IDW_CHILD3                       66
-#define IDW_CHILD4                       67
-#define IDW_CHILD5                       68
-#define IDW_CHILD6                       69
-#define IDW_CHILD7                       70
-#define IDW_CHILD8                       71
-#define IDW_CHILD9                       72
-#define IDW_CHILD10                      73
+#define IDW_MDI_CASCADE                  52
+#define IDW_MDI_TILE                     53
+#define IDW_MDI_ARRANGE                  54
+#define IDW_MDI_CLOSEALL                 55
+#define IDW_FIRSTCHILD                   56
+#define IDW_CHILD2                       57
+#define IDW_CHILD3                       58
+#define IDW_CHILD4                       59
+#define IDW_CHILD5                       60
+#define IDW_CHILD6                       61
+#define IDW_CHILD7                       62
+#define IDW_CHILD8                       63
+#define IDW_CHILD9                       64
+#define IDW_CHILD10                      65
 
-#define IDW_FILE_MRU_FILE1               75
-#define IDW_FILE_MRU_FILE2               76
-#define IDW_FILE_MRU_FILE3               77
-#define IDW_FILE_MRU_FILE4               78
-#define IDW_FILE_MRU_FILE5               79
-#define IDW_FILE_MRU_FILE6               80
-#define IDW_FILE_MRU_FILE7               81
-#define IDW_FILE_MRU_FILE8               82
-#define IDW_FILE_MRU_FILE9               83
-#define IDW_FILE_MRU_FILE10              84
-#define IDW_FILE_MRU_FILE11              85
-#define IDW_FILE_MRU_FILE12              86
-#define IDW_FILE_MRU_FILE13              87
-#define IDW_FILE_MRU_FILE14              88
-#define IDW_FILE_MRU_FILE15              89
-#define IDW_FILE_MRU_FILE16              90
+#define IDW_FILE_MRU_FILE1               66
+#define IDW_FILE_MRU_FILE2               67
+#define IDW_FILE_MRU_FILE3               68
+#define IDW_FILE_MRU_FILE4               69
+#define IDW_FILE_MRU_FILE5               70
+#define IDW_FILE_MRU_FILE6               71
+#define IDW_FILE_MRU_FILE7               72
+#define IDW_FILE_MRU_FILE8               73
+#define IDW_FILE_MRU_FILE9               74
+#define IDW_FILE_MRU_FILE10              75
+#define IDW_FILE_MRU_FILE11              76
+#define IDW_FILE_MRU_FILE12              77
+#define IDW_FILE_MRU_FILE13              78
+#define IDW_FILE_MRU_FILE14              79
+#define IDW_FILE_MRU_FILE15              80
+#define IDW_FILE_MRU_FILE16              81
 
 // Cursor Resources
-#define IDW_SPLITH                       91
-#define IDW_SPLITV                       92
-#define IDW_TRACK4WAY                    93
+#define IDW_SPLITH                       82
+#define IDW_SPLITV                       83
+#define IDW_TRACK4WAY                    84
 
 // Docking Bitmap Resources
-#define IDW_SDBOTTOM                     94
-#define IDW_SDCENTER                     95
-#define IDW_SDLEFT                       96
-#define IDW_SDMIDDLE                     97
-#define IDW_SDRIGHT                      98
-#define IDW_SDTOP                        99
+#define IDW_SDBOTTOM                     85
+#define IDW_SDCENTER                     86
+#define IDW_SDLEFT                       87
+#define IDW_SDMIDDLE                     88
+#define IDW_SDRIGHT                      89
+#define IDW_SDTOP                        90
 
 
 // A generic ID for any static control
@@ -80,9 +83,6 @@
 // * In general, resource IDs can have values from 1 to 65535. Programs with
 //   resource IDs higher than 65535 aren't supported on Windows 95
 //
-// * CMenuBar uses resource IDs beginning from 0 for the top level menu items.
-//   Win32++ leaves resource IDs below 51 unallocated for top level menu items.
-//
 // * Windows uses the icon with the lowest resource ID as the application's
 //   icon. The application's icon is IDW_MAIN, which is the first resource ID
 //   defined by Win32++.
@@ -90,7 +90,7 @@
 // * When more than one static control is used in a dialog, the controls should
 //   have a unique ID, unless a resource ID of -1 is used.
 //
-// * Users of Win32++ are advised to begin their resource IDs from 120 to
+// * Users of Win32++ are advised to begin their resource IDs from 100 to
 //   allow for possible expansion of Win32++.
 
 
