@@ -156,8 +156,11 @@ END
 
 STRINGTABLE
 BEGIN
-    IDW_MAIN                 "MDI Frame"
-	IDW_READY                "Ready"
+    IDW_MAIN                "MDI Frame"
+	IDW_INDICATOR_CAPS      "CAPS"
+    IDW_INDICATOR_NUM       "NUM"
+    IDW_INDICATOR_SCRL      "SCRL"
+    IDW_READY               "Ready"
 END
 
 STRINGTABLE
