@@ -167,6 +167,9 @@ BEGIN
     IDW_MAIN                "Docking sample"
     IDW_VIEW_TOOLBAR        "Show or hide the tool bar"
     IDW_VIEW_STATUSBAR      "Show or hide the status bar"
+	IDW_INDICATOR_CAPS      "CAP"
+    IDW_INDICATOR_NUM       "NUM"
+    IDW_INDICATOR_SCRL      "SCRL"
     IDW_READY               "Ready"	
 END
 
