@@ -196,12 +196,16 @@ END
 STRINGTABLE
 BEGIN
     IDW_MAIN                "MDI Frame"
+	IDW_INDICATOR_CAPS      "CAP"
+    IDW_INDICATOR_NUM       "NUM"
+    IDW_INDICATOR_SCRL      "SCRL"
+    IDW_READY               "Ready"	
     IDW_VIEW_TOOLBAR        "Show or hide the tool bar"
     IDW_VIEW_STATUSBAR      "Show or hide the status bar"
-    IDW_MDI_CASCADE      "Cascade MDI Windows"
-    IDW_MDI_TILE         "Tile MDI Windows"
-    IDW_MDI_ARRANGE      "Arrange Icons"
-    IDW_MDI_CLOSEALL     "Close All MDI Windows"
+    IDW_MDI_CASCADE         "Cascade MDI Windows"
+    IDW_MDI_TILE            "Tile MDI Windows"
+    IDW_MDI_ARRANGE         "Arrange Icons"
+    IDW_MDI_CLOSEALL        "Close All MDI Windows"
     IDW_FIRSTCHILD          "Activate this window"
     IDW_CHILD2              "Activate this window"
     IDW_CHILD3              "Activate this window"
@@ -255,8 +259,8 @@ BEGIN
     SC_MAXIMIZE             "Maximize the Window"
     SC_MINIMIZE             "Minimize the WIndow"
     SC_MOVE                 "Move the Window"
-	  SC_NEXTWINDOW           "Select Next Window"
-	  SC_PREVWINDOW           "Select Previous Window"
+	SC_NEXTWINDOW           "Select Next Window"
+	SC_PREVWINDOW           "Select Previous Window"
     SC_RESTORE              "Restore the Window"
     SC_SIZE                 "Resize the Window"
 END
